Mon Jun 16 16:28:46 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/run_test.pl:

          Fixed svn::executable property.

Mon Jun 16 14:18:21 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/Subscriber.cpp:

          Added increasing debug levels prior to returning from main to
          identify why subscriber looks like it is finishing in time, but
          run_test.pl indicates that the subscriber times out.

        * tests/DCPS/PersistentInfoRepo/run_test.pl:

          Increased time waiting for subsciber 1 to finish and added
          printing timestamps for diagnosing why subsciber indicates
          it finishes, but run_test.pl incicates that the subscriber
          timed out.

Mon Jun 16 14:04:15 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Removed unused variable 'old_header_length'

Mon Jun 16 13:29:18 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/Publisher.cpp:
        * tests/DCPS/PersistentInfoRepo/Subscriber.cpp:

          Changed to catch std::exception.

        * tests/DCPS/PersistentInfoRepo/run_test.pl:

          Added longer delay since subscribers are indicating exiting main
          but run_test.pl is indicating subscriber timing out.

        * tests/Utils/Options.h:

          Fixed code to convert boolean strings to lower case.

        * tests/Utils/Options.cpp:

          Changed code to assume flags without values are boolean flags with
          a value of true.

Sat Jun 14 11:49:19 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/Publisher.cpp:
        * tests/DCPS/PersistentInfoRepo/Subscriber.cpp:

          Added debug statements to indicate when DDS is being cleaned up.

        * tests/DCPS/PersistentInfoRepo/run_test.pl:

          Made flag more descriptive.
